<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>svin_msgs</name>
    <version>0.33.1</version>
    <description>Custom messages for SVIN and Sonar.</description>

    <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>

    <license>MIT</license>

    <author>Bharat Joshi</author>
    <author email="bjoshi@email.sc.edu">Bharat Joshi</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>